--- a/YARNJobManager/.project
+++ b/YARNJobManager/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>JobManager</name>
+  <name>YARNJobManager</name>
   <buildSpec>
     <buildCommand>
       <name>org.scala-ide.sdt.core.scalabuilder</name>
