--- a/YARNNodeManager/.classpath
+++ b/YARNNodeManager/.classpath
@@ -14,8 +14,8 @@
   <classpathentry kind="lib" path="/home/node3/.ivy2/cache/org.uncommons.maths/uncommons-maths/jars/uncommons-maths-1.2.2a.jar"/>
   <classpathentry kind="lib" path="/home/node3/.ivy2/cache/org.scalatest/scalatest_2.11/bundles/scalatest_2.11-2.2.1.jar"/>
   <classpathentry kind="lib" path="/home/node3/.ivy2/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.2.jar"/>
-  <classpathentry kind="src" path="/Common" exported="true" combineaccessrules="false"/>
-  <classpathentry kind="src" path="/JobManager" exported="true" combineaccessrules="false"/>
+  <classpathentry kind="src" path="/YARNCommon" exported="true" combineaccessrules="false"/>
+  <classpathentry kind="src" path="/YARNJobManager" exported="true" combineaccessrules="false"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
 </classpath>
