--- a/YARNNodeManager/.project
+++ b/YARNNodeManager/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>NodeManager</name>
+  <name>YARNNodeManager</name>
   <buildSpec>
     <buildCommand>
       <name>org.scala-ide.sdt.core.scalabuilder</name>
